# PCBViewer

./: .gitignore
ViewerAdmin/: pnpm-lock.yaml
ViewerAdmin/src/api/asset/: asset.js
ViewerDesktop/: .eslintrc.json  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ViewerDesktop/src/: App.tsx  global.css
ViewerDesktop/src-tauri/: Cargo.toml  tauri.conf.json
ViewerDesktop/src-tauri/capabilities/: default.json
ViewerDesktop/src-tauri/src/: main.rs
ViewerDesktop/src/assets/icons/: SearchIcon.tsx  (+2 more)
ViewerDesktop/src/components/: AssetNavigation.tsx  Navigation.tsx  ResizableLayout.tsx  Tab.tsx
ViewerDesktop/src/hooks/: useAsset.ts  useTab.ts
ViewerDesktop/src/lib/: command.ts  db.ts
ViewerDesktop/types/: asset.d.ts  env.d.ts  tab.d.ts
ViewerServer/: .env  Dockerfile  docker-compose.yml  pom.xml
ViewerServer/sql/: PCBViewer.sql  assetMenu.sql  ry_20230529.sql
viewer/: .env  next.config.mjs  package.json  pnpm-lock.yaml
viewer/public/: 御PRO主控板.pcb
viewer/src-tauri/: .env  Cargo.toml  tauri.conf.json
viewer/src-tauri/capabilities/: default.json
viewer/src-tauri/src/: api.rs  app_error.rs  config.rs  lib.rs
viewer/src-tauri/src/pcb/: declare.rs  design.rs  enums.rs  lib.rs  line.rs  mod.rs  part.rs  partdcal.rs  parttype.rs  route.rs  text.rs  via.rs
viewer/src/app/: error.tsx  globals.css  layout.tsx
viewer/src/hooks/: useApp.ts  useAsset.ts  useTab.ts
viewer/src/lib/: notice.ts  proxy.ts
viewer/src/providers/: AppProvider.tsx  AssetProvider.tsx  TabViewProvider.tsx
viewer/src/types/: data.d.ts  tab.d.ts
(+42 files in other folders)
