[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
tauri = { version = "2.0.0-beta.22", features = [] }
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-sql = { version = "2.0.0-beta", features = ["mysql"] }
tauri-plugin-persisted-scope = "2.0.0-beta"
dotenv = "0.15.0"
tauri-plugin-fs = "2.0.0-beta.0"
tauri-plugin-http = "2.0.0-beta.0"
thiserror = "1.0"
tauri-plugin-devtools = { version = "2.0.0-beta.0" }
regex = "1.10.5"
strum = "0.26"
strum_macros = "0.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.0"
